--- a/index.html
+++ b/index.html
@@ -6,7 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <body>
     <button type="button" id="btn">test</button>
+    <script>
+        $('#btn').click(function(){
+            $.ajax({
+                url:'/api/user/auth/facebook',
+                type: 'GET'
+            })
+            .then(data => {
+                console.log(data);
+            })
+            .catch(err => {
+                console.log(err);
+            })
+        })
+    </script>
 </body>
+
 </html>
